--- a/src/index.html
+++ b/src/index.html
@@ -35,42 +35,44 @@
                 >
               </li>
               <li>
-                <a class="menu__item" href="#gallery">Галерея</a>
+                <a class="menu__item hover" href="#gallery">Галерея</a>
               </li>
               <li>
-                <a class="menu__item" href="#events">Події</a>
+                <a class="menu__item hover" href="#events">Події</a>
               </li>
               <li>
-                <a class="menu__item" href="#visit">Відвідування</a>
+                <a class="menu__item hover" href="#visit">Відвідування</a>
               </li>
               <li>
-                <a class="menu__item" href="#becomeFriends">Стати нашим другом</a>
+                <a class="menu__item hover" href="#becomeFriends">Стати нашим другом</a>
               </li>
               <li>
-                <a class="menu__item" href="#aboutUs">Про Нас</a>
+                <a class="menu__item hover" href="#aboutUs">Про Нас</a>
               </li>
               <li>
-                <a class="menu__item" href="#shop">Магазин</a>
+                <a class="menu__item hover" href="#shop">Магазин</a>
               </li>
               <li>
-                <a class="menu__item" href="#blog">Блог</a>
+                <a class="menu__item hover" href="#blog">Блог</a>
               </li>
               <li>
-                <a class="menu__item" href="#contacts">Контакти</a>
+                <a class="menu__item hover" href="#contacts">Контакти</a>
               </li>
-              <div class="menu__search">
-                <input
-                  type="search"
-                  name="search"
-                  class="search__window"
-                   maxlength="30"
-                >
-                <img
-                  class="search__img"
-                  src="./images/search.jpg"
-                  alt="search"
-                >
-              </div>
+              <li>
+                <div class="menu__search menu__item">
+                  <input
+                    type="search"
+                    name="search"
+                    class="search__window"
+                    maxlength="40"
+                  >
+                  <!--<img
+                    class="search__img"
+                    src="./images/search.svg"
+                    alt="search"
+                  >-->
+                </div>
+              </li>
             </ul>
           </nav>
         </div>
@@ -213,11 +215,12 @@
               class="subscription__button-input"
               placeholder="E-mail"
             >
-            <input
+            <button
               type="submit"
-              value=">"
               class="subscription__button-submit"
             >
+              >
+            </button>
           </form>
         </div>
       </div>
@@ -237,19 +240,19 @@
               <div class="footer__net">
                 <img
                   class="icon__fb"
-                  src="./images/gallery/Facebook.png"
+                  src="./images/Fb.svg"
                   alt="icon-facebook"
                 >
                 <img
                   class="icon__inst"
-                  src="images/gallery/Vector.png"
+                  src="./images/inst.svg"
                   alt="logo-instagram"
                 >
               </div>
             </div>
             <div class="footer__info">
               <div class="footer__time-works">
-                <span class="mini-title">Графік роботи</span>
+                <span class="mini-title"><strong>Графік роботи</strong></span>
                 <span><strong>12:00 — 20:00 </strong>середа</span>
                 <span><strong>12:00 — 20:00 </strong>четвер</span>
                 <span><strong>12:00 — 20:00 </strong>п'ятниця</span>
@@ -262,8 +265,8 @@
                 </span>
               </div>
               <div class="footer__contacts">
-                <span class="mini-title">Контакти:</span>
-                <span>вул. М.Грушевського, 6;<br>
+                <span class="mini-title"><strong>Контакти:</strong></span>
+                <span class="footer__details">вул. М.Грушевського, 6;<br>
                   Київ, 01001<br>
                   тел.<a href="tel:+38-044-278-1357" class="footer__phone">+38 (044) 278-13-57</a><br>
                   факс +38 (044) 278-13-57<br>
@@ -278,16 +281,32 @@
           <nav class="footer__nav">
             <ul class="nav__list">
               <div class="nav__list-left">
-                <li class="nav__item">Галерея</li>
-                <li class="nav__item">Виставки та події</li>
-                <li class="nav__item">Відвідування</li>
-                <li class="nav__item">Стати нашим другом</li>
+                <li>
+                  <a class="nav__item hover" href="#gallery">Галерея</a>
+                </li>
+                <li>
+                  <a class="nav__item hover" href="#events">Виставки та події</a>
+                </li>
+                <li>
+                  <a class="nav__item hover" href="#visit">Відвідування</a>
+                </li>
+                <li>
+                  <a class="nav__item hover" href="#becomeFriends">Стати нашим другом</a>
+                </li>
               </div>
               <div class="nav__list-right">
-                <li class="nav__item">Про Нас</li>
-                <li class="nav__item" id="shop">Магазин</li>
-                <li class="nav__item" id="blog">Блог</li>
-                <li class="nav__item">Контакти</li>
+                <li>
+                  <a class="nav__item hover" href="#aboutUs">Про Нас</a>
+                </li>
+                <li id="shop">
+                  <a class="nav__item hover" href="#shop">Магазин</a>
+                </li>
+                <li id="blog">
+                  <a class="nav__item hover" href="#blog">Блог</a>
+                </li>
+                <li>
+                  <a  class="nav__item hover" href="#contacts">Контакти</a>
+                </li>
               </div>
             </ul>
           </nav>
