--- a/src/index.html
+++ b/src/index.html
@@ -110,10 +110,8 @@
           <div class="events__date date">26.08-29.11.2019</div>
           <h3 class="events__heading">Йду і повертаюсь</h3>
           <p class="events__text">
-
             Національний Художній Музей України презентує унікальну частину колекції Градобанку
             - українське мистецтво другої половини 1980-1995 років.
-
           </p>
         </div>
       </section>
@@ -124,11 +122,9 @@
           <div class="events__date date">26.08-29.11.2019</div>
           <h3 class="events__heading">І спогади і мрії</h3>
           <p class="events__text">
-
             Національний художній музей України до 100 річчя від дня народження
             видатної української художниці Тетяни Яблонської
             відкриває ретроспективну ювілейну виставку «І спогади і мрії».
-
           </p>
         </div>
         <img
@@ -168,20 +164,19 @@
         <img
           class="gallery__img"
           src="../src/images/gallery/2.jpg"
-          alt="Зображення будинку в зимню пору з конною упряжкоюб що проїжджає неподалік"
+          alt="Зображення будинку в зимню пору з конною упряжкою, що проїжджає неподалік"
         >
         <img
           class="gallery__img gallery__img--hidden"
           src="../src/images/gallery/2.1.jpg"
-          alt="Зображення гусейб що йдуть стежкою"
+          alt="Зображення гусей, що йдуть стежкою"
         >
       </div>
-
       <div class="gallery__picture-bottom">
         <img
           class="gallery__img"
           src="../src/images/gallery/3.jpg"
-          alt="Зображення дівчини що відпочиває на лавочці в парку літню пору"
+          alt="Зображення дівчини що відпочиває на лавочці в парку літньою порою"
         >
         <img
           class="gallery__img"
@@ -269,7 +264,6 @@
           </a>
         </p>
       </div>
-
       <nav class="footer__nav">
         <ul class="footer__list">
           <li class="footer__item">
