Favicon and action on buttons added

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAMU</title>
+    <link rel="icon" href="./images/favicon.png">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
 
@@ -33,8 +34,8 @@
             <span class="menu__info-iemt">Адреса:</span>
             <span class="menu__info-iemt">Київ, вул. М. Грушевського, 6</span>
           </div>
-          <button class="menu__button button menu__button--red">Купити квиток</button>
-          <button class="menu__button button menu__button--green">Стати членом</button>
+          <button class="menu__button button menu__button--red" onclick="location.href='#footer'">Купити квиток</button>
+          <button class="menu__button button menu__button--green" onclick="location.href='#footer'">Стати членом</button>
           <div class="menu__picture"></div>
 
           <nav class="header__navigation navigation">
@@ -46,7 +47,7 @@
                 <a href="#exhibition" class="navigation__link">Виставки та події</a>
               </li>
               <li>
-                <a href="#collection" class="navigation__link">Колекція</a>
+                <a href="#exhibition" class="navigation__link">Колекція</a>
               </li>
             </ul>
           </nav>
@@ -59,7 +60,7 @@
             </h1>
             <p class="title__info">Внесок українських митців у світову культуру 19-20ст</p>
             <span class="title__dates">10.08 - 10.10</span>
-            <button class="title__button button">Купити квиток</button>
+            <button class="title__button button" onclick="location.href='#footer'">Купити квиток</button>
             <span class="title__line"></span>
             <div class="title__picture">
               <p class="title__picture-name">Дівчина з Поділля<br>В. Тропінін</p>
@@ -91,7 +92,7 @@
               <p class="exhibition__duration exhibition__duration--angels">11.07 - 22.09</p>
               <h3 class="exhibition__name exhibition__name--angels">Кураторська виставка “Ангели”</h3>
               <p class="exhibition__about exhibition__about--angels">Виставковий проект «Ангели» – знакова подія для української культури і водночас наймасштабніший...</p>
-              <button class="exhibition__button button">Купити квиток</button>
+              <button class="exhibition__button button" onclick="location.href='#footer'">Купити квиток</button>
             </div>
           </div>
 
@@ -109,7 +110,7 @@
               <p class="exhibition__duration exhibition__duration--present">Діє постійно</p>
               <h3 class="exhibition__name exhibition__name--present">Мистецтво ХХ&nbsp;ст.&nbsp;—&nbsp;XXI&nbsp;ст.</h3>
               <p class="exhibition__about exhibition__about--present">Знакові роботи Алли Горської, Миколи Самокиша, Федора Кричевського та інших митців.</p>
-              <button class="exhibition__button button">Купити квиток</button>
+              <button class="exhibition__button button" onclick="location.href='#footer'">Купити квиток</button>
             </div>
             <div class="section__background section__background--present"></div>
           </div>
@@ -128,7 +129,7 @@
               <p class="exhibition__duration exhibition__duration--ancient">Діє постійно</p>
               <h3 class="exhibition__name exhibition__name--ancient">Стародавнє мистецтво</h3>
               <p class="exhibition__about">Визначні приклади стародавнього українського іконопису та живопису</p>
-              <button class="exhibition__button button">Купити квиток</button>
+              <button class="exhibition__button button" onclick="location.href='#footer'">Купити квиток</button>
             </div>
             <div class="section__background section__background--ancient"></div>
           </div>
@@ -153,7 +154,7 @@
               <p class="event__type event__type--excursion">Екскурсія</p>
               <h3 class="event__name event__name--excursion">Кураторські екскурсії від Павла Гудімова</h3>
               <p class="event__about">Таємниці підготовки, історії експонатів, магія дійства до і в момент вашої присутності – розгортатиметься...</p>
-              <button class="event__button button">Зареєструватись</button>
+              <button class="event__button button" onclick="location.href='#footer'">Зареєструватись</button>
             </div>
           </div>
 
@@ -171,7 +172,7 @@
               <p class="event__type event__type--masterclass">Майстер-клас</p>
               <h3 class="event__name">Подорож до Австралії</h3>
               <p class="event__about">Цієї неділі о 14:00 на арт-мандрівників чекає останній пункт кругосвітньої подорожі - Австралія.</p>
-              <button class="event__button button">Зареєструватись</button>
+              <button class="event__button button" onclick="location.href='#footer'">Зареєструватись</button>
             </div>
           </div>
           <a href="#" class="section__add section__add--events">Календар подій</a>
@@ -182,7 +183,7 @@
         <div class="section__content visit">
           <h2 class="visit__name">Сплануйте візит до музею</h2>
           <p class="visit__about">Оберіть зручний день, зареєструйтесь на події, що цікавлять, купіть квиток заздалегідь, щоб ніщо не завадило вам насолоджуватись мистецтвом</p>
-          <button class="visit__button button">Почати</button>
+          <button class="visit__button button" onclick="location.href='#footer'">Почати</button>
         </div>
       </section>
 
@@ -241,8 +242,9 @@
         <p class="subscribe__about">Першими дізнавайтесь про новини музею та розіграші, отримуйте запрошення на події та читайте статті від кураторів</p>
         <form
           class="subscribe__form"
-          action="#"
+          action="https://formspree.io/kupka.m.y@gmail.com"
           method="POST"
+          autocomplete="off"
         >
           <input
             class="subscribe__input"
@@ -276,7 +278,6 @@
               <img src="./images/inst.svg" alt="instagram">
             </a>
           </div>
-
         </div>
         <div class="footer__item footer__item--schedule">
           <h2 class="footer__name">Розклад роботи</h2>
