--- a/src/index.html
+++ b/src/index.html
@@ -267,7 +267,7 @@
       </div>
     </main>
 
-    <footer class="footer">
+    <footer class="footer" id="footer">
       <div class="footer__container">
         <div class="footer__content">
           <div class="footer__item footer__item--contacts">
