--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
       <h1 class="exhibition__title">Актуальні виставки</h1>
 
       <div class="ex-card exhibition__first">
-        <div class="ex-card__container-img ex-card__container--order">
+        <div class="ex-card__image">
           <img
             src="./images/234_belm3506_1_large.png"
             alt="angel sculpture"
@@ -102,7 +102,7 @@
           >
         </div>
         <div class="ex-card__container-text">
-          <h2 class="ex-card__date ex-card__date--1">11.07 - 22.09</h2>
+          <h2 class="ex-card__date ex-card__date--big">11.07 - 22.09</h2>
           <h3 class="ex-card__title">Кураторська виставка "Ангели"</h3>
           <p class="ex-card__text">
             Виставковий проект &laquo;Ангели&raquo; -
@@ -119,15 +119,20 @@
       </div>
 
       <div class="ex-card exhibition__second">
-        <div class="ex-card__container-img ex-card__container-img--2">
+        <div class="ex-card__image">
           <img
             src="./images/1243603241.png"
             alt="lovers picture"
             class="ex-card__image-21"
           >
+          <img
+            src="./images/Мистецтво ХХ ст. - ХХі ст..png"
+            alt="art picture"
+            class="ex-card__image-22"
+          >
         </div>
-        <div class="ex-card__container-text ex-card__container-text--2">
-          <h2 class="ex-card__date">Діє постійно</h2>
+        <div class="ex-card__container-text ex-card__container-text--margin">
+          <h2 class="ex-card__date">Діє постійнo</h2>
           <h3 class="ex-card__title">Мистецтво ХХ ст. - ХХІ ст.</h3>
           <p class="ex-card__text">
             Знакові роботи Алли Горської, Миколи Самошкиша, Федора Кричевського
@@ -144,13 +149,17 @@
       </div>
 
       <div class="ex-card exhibition__third">
-        <div class="ex-card__container-img ex-card__container-img--3">
+        <div class="ex-card__image">
           <img
           src="./images/3354.png"
           alt="musition picture"
           class="ex-card__image-31"
           >
-
+          <img
+          src="./images/Старо давнє мисте цтво.png"
+          alt="art picture"
+          class="ex-card__image-32"
+          >
         </div>
         <div class="ex-card__container-text">
           <h2 class="ex-card__date">Діє постійно</h2>
