fix favicon & transform

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="./styles/main.scss">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="favicon" href="./images/favicon/favicon.ico">
+    <link
+      rel="shortcut icon"
+      type="image/ico"
+      href="./images/favicon/favicon.ico"
+    >
   </head>
   <body>
     <header class="header" id="header">
@@ -334,10 +338,10 @@
             <img src="./images/Vector 2.png" alt="twitter">
           </a>
           <a href="#" class="contacts__telegram">
-            <img src="./images/Vector (1).png" alt="telegram">
+            <img src="./images/telegram.svg" alt="telegram">
           </a>
           <a href="#" class="contacts__instagram">
-            <img src="./images/Vector 3.png" alt="instagram">
+            <img src="./images/insta.svg" alt="instagram">
           </a>
         </div>
       </div>
