fix links & pointer

--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,8 @@
           <span class="nav__work-info">Київ, вул. М. Грушевського, 6</span>
         </div>
         <ul class="nav__items">
-          <li><a href="#" class="nav__link">Спланувати візит</a></li>
-          <li><a href="#" class="nav__link">Виставки та події</a></li>
+          <li><a href="#visit" class="nav__link">Спланувати візит</a></li>
+          <li><a href="#exhibitios" class="nav__link">Виставки та події</a></li>
           <li><a href="#" class="nav__link">Колекція</a></li>
         </ul>
         <div class="nav__buttons">
@@ -94,7 +94,7 @@
       </span>
     </header>
 
-    <section class="exhibition">
+    <section class="exhibition" id="exhibitios">
       <h1 class="exhibition__title">Актуальні виставки</h1>
 
       <div class="ex-card exhibition__first">
@@ -229,7 +229,7 @@
       <a href="#" class="future__calendar">Календар подій</a>
     </section>
 
-    <section class="visit-us">
+    <section class="visit-us" id="visit">
       <img
         src="./images/к.png"
         alt="woman painted"
@@ -325,10 +325,10 @@
         <span class="contacts__adress">
           Київ <br>
           вул. М. Грушевського, 6
-          тел. 278-13-57
+          <a href="tel:" class="contacts__adress">тел. 278-13-57</a>
         </span>
-        <span class="contacts__phone">278-74-54</span>
-        <span class="contacts__mail">info@namu.kiev.ua</span>
+        <a href="tel:" class="contacts__phone">278-74-54</a>
+        <a href="mailto:info@namu.kiev.ua" class="contacts__mail">info@namu.kiev.ua</a>
 
         <div class="contacts__container">
           <a href="#" class="contacts__facebook">
