add simple hover efects to footer, center footer at small resolution, correct button hover, add link to logo

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
         <option value="ENG">ENG</option>
       </select>
 
-      <span class="header__org">NAMU</span>
+      <a href="#header" class="header__org">NAMU</a>
       <div class="header__text text">
         <p class="text__duration-1">10 серпня - 10 листопада</p>
         <p class="text__name-1">Мистецтво</p>
@@ -325,8 +325,9 @@
         <span class="contacts__adress">
           Київ <br>
           вул. М. Грушевського, 6
-          <a href="tel:" class="contacts__adress">тел. 278-13-57</a>
         </span>
+        <a href="tel:" class="contacts__adress">тел. 278-13-57</a>
+
         <a href="tel:" class="contacts__phone">278-74-54</a>
         <a href="mailto:info@namu.kiev.ua" class="contacts__mail">info@namu.kiev.ua</a>
 
