make fixes after mentors review

--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,9 @@
         class="header__image"
       >
 
-      <span class="header__picture-name">Дівчина з Поділля <br>
+      <span class="header__picture-name">
+        Дівчина з Поділля
+        <br>
         В.Тропінін
       </span>
     </header>
@@ -155,14 +157,14 @@
       <div class="ex-card exhibition__third">
         <div class="ex-card__image">
           <img
-          src="./images/3354.png"
-          alt="musition picture"
-          class="ex-card__image-31"
+            src="./images/3354.png"
+            alt="musition picture"
+            class="ex-card__image-31"
           >
           <img
-          src="./images/Старо давнє мисте цтво.png"
-          alt="art picture"
-          class="ex-card__image-32"
+            src="./images/Старо давнє мисте цтво.png"
+            alt="art picture"
+            class="ex-card__image-32"
           >
         </div>
         <div class="ex-card__container-text">
@@ -295,22 +297,22 @@
       <a href="#" class="news__link">Усі новини</a>
     </section>
 
-    <section class="daigest">
-      <h1 class="daigest__title">Підпишіться на дайджест</h1>
-      <div class="daigest__box">
-        <p class="daigest__text">
+    <section class="digest">
+      <h1 class="digest__title">Підпишіться на дайджест</h1>
+      <div class="digest__box">
+        <p class="digest__text">
           Першими дізнавайтесь про новини музею та розіграші,
           отримуйте  запрошення на події та читайте статті від кураторів
         </p>
         <form
-          class="daigest__form"
-          action="mail.php"
+          class="digest__form"
+          action="https://www.google.com/mail"
           method="POST"
         >
           <input
             type="email"
             name="mail"
-            class="daigest__email"
+            class="digest__email"
             placeholder="e-mail"
             required
           >
@@ -320,7 +322,7 @@
 
     <footer class="footer" id="foo">
       <a href="#header" class="footer__arrow">|</a>
-      <div class="contacts">
+      <div class="footer__contacts contacts">
         <h2 class="contacts__title">Контакти</h2>
         <span class="contacts__adress">
           Київ <br>
@@ -346,20 +348,20 @@
           </a>
         </div>
       </div>
-      <div class="work-time">
+      <div class="footer__work-time work-time">
         <h2 class="work-time__title">Розклад роботи</h2>
         <div class="work-time__container">
           <span class="work-time__day"> пн вт ср чт пт сб нд</span>
           <span class="work-time__time">вихідний вихідний 10:00-17:00 10:00-17:00 10:00-19:00 10:00-18:00 10:00-17:00</span>
         </div>
       </div>
-      <div class="membership">
+      <div class="footer__membership membership">
         <h2 class="membership__title">Членські програми</h2>
         <a href="#" class="membership__cash">Зробити разовий внесок</a>
         <a href="#" class="membership__individual-cash">Індивідуальна</a>
         <a href="#" class="membership__corporate-cash">Корпоративна</a>
       </div>
-      <div class="about-us">
+      <div class="footer__about-us about-us">
         <h2 class="about-us__title">Про нас</h2>
         <a href="#" class="about-us__history">Історія</a>
         <a href="#" class="about-us__museum">Обличчя музею</a>
