change alt in image

--- a/src/index.html
+++ b/src/index.html
@@ -68,17 +68,17 @@
         <img
           class="title__logo logo"
           src="../src/images/NA_MU.png"
-          alt="Логотип"
+          alt="Art museum icon"
         >
         <img
           class="title__img"
           src="../src/images/Museum.png"
-          alt="Національний музей"
+          alt="National museum"
         >
         <img
           class="title__img-mid"
           src="../src/images/Museum_320.png"
-          alt="Національний музей"
+          alt="National museum"
         >
         <div class="title__content">
           <h1 class="title__heading">
@@ -117,7 +117,7 @@
           <div class="actions__card card">
             <img
               src="images/go.png"
-              alt="images"
+              alt="Scenery"
               class="card__image"
             >
             <div class="card__content">
@@ -133,7 +133,7 @@
           <div class="actions__card card">
             <img
               src="images/dreams.png"
-              alt="images"
+              alt="Girl with a peacock"
               class="card__image"
             >
             <div class="card__content">
@@ -181,17 +181,17 @@
 
           <div class="gallery__top">
             <img
-              alt="gallery__photo"
+              alt="The girl in an embroidered shirt"
               src="./images/gallery-1.png"
               class="gallery__img"
             >
             <img
+              alt="The village in winter"
               src="./images/gallery-2.png"
-              alt="gallery__photo"
               class="gallery__img gallery__img-hidden gallery__img-2"
             >
             <img
-              alt="gallery__photo"
+              alt="Geeses"
               src="./images/gallery-3.png"
               class="gallery__img gallery__img-hidden gallery__img-3"
             >
@@ -199,18 +199,18 @@
 
           <div class="gallery__bottom">
             <img
+              alt="Park"
               src="./images/gallery-4.png"
-              alt="gallery__photo"
               class="gallery__img gallery__img-hidden gallery__img-4"
             >
             <img
+              alt="Morning sea"
               src="./images/gallery-5.png"
-              alt="gallery__photo"
               class="gallery__img gallery__img-hidden gallery__img-5"
             >
             <img
+              alt="Appointment"
               src="./images/gallery-6.png"
-              alt="gallery__photo"
               class="gallery__img gallery__img-hidden gallery__img-6"
             >
           </div>
