renamed classes and fix scss

--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
         >
         <div class="title__content">
           <h1 class="title__heading">
-            худож<span class="title__heading--opacity">ній</span><br>музей
+            худож<span class="title__heading title__heading--opacity">ній</span><br>музей
           </h1>
           <div class="title__tickets">
             <div class="title__ticket">
@@ -188,12 +188,12 @@
             <img
               alt="The village in winter"
               src="./images/gallery-2.png"
-              class="gallery__img gallery__img-hidden gallery__img-2"
+              class="gallery__img"
             >
             <img
               alt="Geeses"
               src="./images/gallery-3.png"
-              class="gallery__img gallery__img-hidden gallery__img-3"
+              class="gallery__img"
             >
           </div>
 
@@ -201,17 +201,17 @@
             <img
               alt="Park"
               src="./images/gallery-4.png"
-              class="gallery__img gallery__img-hidden gallery__img-4"
+              class="gallery__img"
             >
             <img
               alt="Morning sea"
               src="./images/gallery-5.png"
-              class="gallery__img gallery__img-hidden gallery__img-5"
+              class="gallery__img"
             >
             <img
               alt="Appointment"
               src="./images/gallery-6.png"
-              class="gallery__img gallery__img-hidden gallery__img-6"
+              class="gallery__img"
             >
           </div>
 
@@ -268,10 +268,10 @@
           <img
             src="./images/NA_MU.png"
             alt="Art museum icon"
-            class="footer__icon-logo"
+            class="footer__icon--logo"
           >
 
-          <div class="footer__icon-link">
+          <div class="footer__icon--link">
             <a href="https://www.facebook.com" class="footer__link">
               <img src="./images/Facebook.png" alt="facebook icon">
             </a>
@@ -311,14 +311,14 @@
           <hr class="footer__line">
 
           <nav class="footer__nav">
-            <div class="footer__nav-left">
+            <div class="footer__nav--left">
               <a href="#gallery" class="footer__title-hover footer__title">Галерея</a>
               <a href="#actions" class="footer__title-hover footer__title">Виставки та події</a>
               <a href="#lecture" class="footer__title-hover footer__title">Відвідування</a>
               <a href="#subscription" class="footer__title-hover footer__title">Стати нашим другом</a>
             </div>
 
-            <div class="footer__nav-right">
+            <div class="footer__nav--right">
               <a href="#aboutUs" class="footer__title-hover footer__title">Про нас</a>
               <a href="#" class="footer__title-hover footer__title">Магазин</a>
               <a href="#" class="footer__title-hover footer__title">Блог</a>
