--- a/src/index.html
+++ b/src/index.html
@@ -303,7 +303,7 @@
                 <p>Київ, 01001</p>
                 <p>тел. <a class="footer__title-hover" href="tel:+38 (044) 278-13-57">+38 (044) 278-13-57</a></p>
                 <p>факс <a class="footer__title-hover" href="tel:+38 (044) 278-74-54">+38 (044) 278-74-54</a></p>
-                <p>e-mail: <a class="footer__title-hover" href="mailto:info@namu.kiev.ua">info@namu.kiev.ua</a></p>
+                <p>e-mail: <a class="footer__title-hover" href="#">info@namu.kiev.ua</a></p>
               </div>
             </div>
           </div>
