--- a/src/index.html
+++ b/src/index.html
@@ -178,12 +178,12 @@
             <img
               src="./images/gallery-2.png"
               alt="gallery__photo"
-              class="gallery__img gallery__img-hidden gallery__img-2"
+              class="gallery__img"
             >
             <img
               alt="gallery__photo"
               src="./images/gallery-3.png"
-              class="gallery__img gallery__img-hidden gallery__img-3"
+              class="gallery__img"
             >
           </div>
 
@@ -191,17 +191,17 @@
             <img
               src="./images/gallery-4.png"
               alt="gallery__photo"
-              class="gallery__img gallery__img-hidden gallery__img-4"
+              class="gallery__img"
             >
             <img
               src="./images/gallery-5.png"
               alt="gallery__photo"
-              class="gallery__img gallery__img-hidden gallery__img-5"
+              class="gallery__img"
             >
             <img
               src="./images/gallery-6.png"
               alt="gallery__photo"
-              class="gallery__img gallery__img-hidden gallery__img-6"
+              class="gallery__img"
             >
           </div>
 
@@ -291,9 +291,9 @@
               <div class="footer__contacts-info">
                 <p>вул. М. Грушевського, 6</p>
                 <p>Київ, 01001</p>
-                <p>тел. <a class="footer__title-hover" href="tel:+38 (044) 278-13-57">+38 (044) 278-13-57</a></p>
-                <p>факс <a class="footer__title-hover" href="tel:+38 (044) 278-74-54">+38 (044) 278-74-54</a></p>
-                <p>e-mail: <a class="footer__title-hover" href="mailto:info@namu.kiev.ua">info@namu.kiev.ua</a></p>
+                <p>тел. <a class="footer__title--hover" href="tel:+38 (044) 278-13-57">+38 (044) 278-13-57</a></p>
+                <p>факс <a class="footer__title--hover" href="tel:+38 (044) 278-74-54">+38 (044) 278-74-54</a></p>
+                <p>e-mail: <a class="footer__title--hover" href="mailto:info@namu.kiev.ua">info@namu.kiev.ua</a></p>
               </div>
             </div>
           </div>
@@ -302,17 +302,17 @@
 
           <nav class="footer__nav">
             <div class="footer__nav-left">
-              <a href="#gallery" class="footer__title-hover footer__title">Галерея</a>
-              <a href="#actions" class="footer__title-hover footer__title">Виставки та події</a>
-              <a href="#lecture" class="footer__title-hover footer__title">Відвідування</a>
-              <a href="#subscription" class="footer__title-hover footer__title">Стати нашим другом</a>
+              <a href="#gallery" class="footer__title--hover footer__title">Галерея</a>
+              <a href="#actions" class="footer__title--hover footer__title">Виставки та події</a>
+              <a href="#lecture" class="footer__title--hover footer__title">Відвідування</a>
+              <a href="#subscription" class="footer__title--hover footer__title">Стати нашим другом</a>
             </div>
 
             <div class="footer__nav-right">
-              <a href="#aboutUs" class="footer__title-hover footer__title">Про нас</a>
-              <a href="#" class="footer__title-hover footer__title">Магазин</a>
-              <a href="#" class="footer__title-hover footer__title">Блог</a>
-              <a href="#contact" class="footer__title-hover footer__title">Контакти</a>
+              <a href="#aboutUs" class="footer__title--hover footer__title">Про нас</a>
+              <a href="#" class="footer__title--hover footer__title">Магазин</a>
+              <a href="#" class="footer__title--hover footer__title">Блог</a>
+              <a href="#contact" class="footer__title--hover footer__title">Контакти</a>
             </div>
           </nav>
         </div>
