--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,147 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Oswald:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page">
     <script type="text/javascript" src="scripts/main.js"></script>
+
+    <div class="container">
+      <header class="header container__header">
+        <div class="header__burger burger">
+          <span class="burger-menu"></span>
+        </div>
+        <h1 class="header__logo">
+          NA
+          MU
+        </h1>
+        <nav class="nav header__nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#" class="nav__link">Галерея</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Виставка та події</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Відвудування</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Стати нашим другом</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Про Нас</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Магазин</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Блог</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+
+      <div class="cutaway container__cutaway">
+        <div class="cutaway__image">
+          <h1 class="cutaway__image-name">ХУДОЖ<span class="cutaway__image-transparent">НІЙ</span> МУЗЕЙ</h1>
+        </div>
+
+        <div class="cutaway__ticket"></div>
+        <div class="cutaway__decor"></div>
+      </div>
+
+      <div class="current container__current">
+        <h2 class="current__event">Актуальні події</h2>
+        <div class="current__block">
+          <div class="current__block-photo1">
+            <img src="./images/Rectangle 2.1.svg" alt="Живопис з колекції Градобанку">
+          </div>
+          <div class="current__block-exhibition1 show">
+            <p class="show__event">Виставка</p>
+            <p class="show__date">26.08-29.11.2019</p>
+            <h3 class="show__name">Йду і повертаюсь</h3>
+            <p class="show__content">Національний Художній Музей України презентує унікальну
+              частину колекції Градобанку - українське мистецтво другої
+              половини 1980-1995 років.
+            </p>
+          </div>
+          <div class="current__block-exhibition2 show">
+            <p class="show__event">Виставка</p>
+            <p class="show__date">26.08-29.11.2019</p>
+            <h3 class="show__name">І спогади і мрії</h3>
+            <p class="show__content">Національний художній музей України до 100 річчя від дня
+              народження   видатної української художниці  Тетяни Яблонської
+              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+          <div class="current__block-photo2">
+            <img src="./images/Rectangle 4.1.svg" alt="Живопис Тетяни Яблонської">
+          </div>
+        </div>
+      </div>
+
+      <div class="lection container__lection">
+        <div class="lection__block">
+          <p class="lection__event">ЛЕКЦІЯ</p>
+          <p class="lection__date">26/08/2019 - 11:00</p>
+          <h3 class="lection__name">Від класицизму до романтизму</h3>
+        </div>
+      </div>
+
+      <div class="gallery container__gallery">
+        <h2 class="gallery__name">Галерея</h2>
+        <div class="gallery__photo">
+          <img
+            src="./images/photo1.svg"
+            alt="woman"
+            class="gallery__photo1"
+          >
+          <img
+            src="./images/photo2.svg"
+            alt="winter"
+            class="gallery__photo2"
+          >
+          <img
+            src="./images/photo3.svg"
+            alt="park"
+            class="gallery__photo3"
+          >
+          <img
+            src="./images/photo4.svg"
+            alt="sea"
+            class="gallery__photo4"
+          >
+        </div>
+        <div class="gallery__switch"></div>
+      </div>
+
+      <div class="sub gallery__sub">
+        <div class="sub__name">Підписка</div>
+        <div class="sub__description">Бути в курсі всіх актуальних подій
+          та останніх новин.
+        </div>
+        <div class="sub__email">
+          <input
+            type="email"
+            class="sub__email-input"
+            placeholder="E-mail"
+          >
+          <div class="sub__email-button"></div>
+        </div>
+
+      </div>
+
+    </div>
+
+
   </body>
 </html>
