--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -27,7 +27,7 @@
         </div>
         <div class="header__info">
           <h1 class="header__title">Худож<span class="header__title--white">ній</span><br>музей</h1>
-          <a href="#" class="header__link">Квитки</a>
+          <a href="#" class="header__link">Квитки<span class="header__button button"></span></a>
         </div>
         <div class="header__events">
           <p class="header__text">Події</p>
@@ -36,27 +36,27 @@
     </header>
 
     <main class="main">
-      <section class="main__content main--gap container">
-        <h2 class="main__current-header">Актуальні події</h2>
-        <article class="event main__event--first">
+      <section class="main__events main__events--gap container">
+        <h2 class="main__current-title title">Актуальні події</h2>
+        <article class="main__event event">
           <img
             src="./images/evets/event-left.png"
             alt=""
             class="event__img"
           >
-          <div class="event__info">
-            <p class="event__typ">ВИСТАВКА <span class="event__date">26.08-29.11.2019</span></p>
-            <h3 class="event__title">Йду і повертаюсь</h3>
+          <div class="event__info event__info--gap">
+            <p class="event__type">ВИСТАВКА <span class="event__date">26.08-29.11.2019</span></p>
+            <h3 class="event__title event__title--red-box">Йду і повертаюсь</h3>
             <p class="event__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
           </div>
         </article>
-        <article class="event main__event--last">
-          <div class="event__info">
+        <article class="main__event--reverse event">
+          <div class="event__info event__info--gap">
             <p class="event__type">
               ВИСТАВКА
               <span class="event__date">26.08-29.11.2019</span>
             </p>
-            <h3 class="event__title">I  спогади і мрії </h3>
+            <h3 class="event__title event__title--red-box">I  спогади і мрії </h3>
             <p class="event__text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
           </div>
           <img
@@ -67,14 +67,14 @@
         </article>
       </section>
 
-      <section class="main__lecture container lecture">
-        <div class="lecture__current">
-          <p class="event__typ">ЛЕКЦІЯ <span class="event__date">26/08/2019 - 11:00</span></p>
-          <h3 class="event__title">Від класицизму до романтизму</h3>
-        </div>
+      <section class="main__lecture main__lecture--gap container">
+        <article class="main__lecture-current lecture">
+          <p class="lecture__text">ЛЕКЦІЯ <span class="lecture__date">26/08/2019 - 11:00</span></p>
+          <h3 class="lecture__title">Від класицизму до романтизму</h3>
+        </article>
       </section>
 
-      <section class="gallery gallery--gap">
+      <section class="main__gallery main__gallery--gap gallery">
         <div class="gallery__content container">
           <h3 class="gallery__title">Галерея</h3>
           <div class="gallery__image">
@@ -109,13 +109,13 @@
               class="gallery__image--6"
             >
           </div>
-          <button class="gallery__button">></button>
+          <button class="gallery__button button"></button>
         </div>
       </section>
 
-      <section class="subscribe">
+      <section class="main__subscribe main__subscribe--gap subscribe">
         <div class="subscribe__info">
-          <h3 class="subscribe__title">Підписка</h3>
+          <h3 class="subscribe__title title">Підписка</h3>
           <p class="subscribe__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
           <form class="subscribe__form">
             <label for="email">
@@ -127,7 +127,7 @@
                 id="email"
               >
             </label>
-            <button class="subscribe__button">></button>
+            <button class="subscribe__button button button--red"></button>
           </form>
         </div>
       </section>
@@ -138,8 +138,8 @@
         <div class="footer__content--left">
           <div class="footer__visualisation">
             <div class="footer__logo logo">NA<br>MU</div>
-            <div class="footer__online-contact public">
-              <span class="public__facebook">
+            <div class="footer__public public">
+              <span class="public__facebook-icon">
                 <svg
                   width="12"
                   height="24"
@@ -150,7 +150,7 @@
                   <path d="M2.7196 4.64899C2.7196 5.2538 2.7196 7.9533 2.7196 7.9533H0.302532V11.9938H2.7196V24.0009H7.68478V11.9942H11.0166C11.0166 11.9942 11.3287 10.0568 11.4799 7.93841C11.0463 7.93841 7.70355 7.93841 7.70355 7.93841C7.70355 7.93841 7.70355 5.58776 7.70355 5.17573C7.70355 4.76282 8.24491 4.2074 8.77997 4.2074C9.31402 4.2074 10.4412 4.2074 11.4852 4.2074C11.4852 3.65727 11.4852 1.75647 11.4852 0.000976577C10.0915 0.000976577 8.50592 0.000976577 7.80701 0.000976577C2.59687 0.000697581 2.7196 4.04524 2.7196 4.64899Z" fill="black">
                 </svg>
               </span>
-              <span class="public__instagrame">
+              <span class="public__instagrame-icon">
                 <svg
                   width="24"
                   height="24"
@@ -164,38 +164,57 @@
                 </svg>
               </span>
             </div>
-            <div class="footer__copyright">Copyright © 2019. All Rights Reserved.</div>
           </div>
           <div class="footer__schedule schedule">
-            <p class="schedule__text">Графік роботи</p>
-            <p class="schedule__time text"><span class="schedulte__time--bold">12:00 — 20:00 </span>середа</p>
-            <p class="schedule__time text"><span class="schedulte__time--bold">12:00 — 20:00 </span>четвер</p>
-            <p class="schedule__time text"><span class="schedulte__time--bold">12:00 — 20:00 </span>п’ятниця</p>
-            <p class="schedule__time text"><span class="schedulte__time--bold">11:00 — 19:00 </span>субота</p>
-            <p class="schedule__time text"><span class="schedulte__time--bold">11:00 — 19:00 </span>неділя</p>
-            <p class="schedule__info text">Вихідні понеділок,<br> вівторок<br>Каса припиняє роботу<br> за 1 годину<br>до закриття музею</p>
+            <p class="schedule__heading">Графік роботи</p>
+            <p class="schedule__time"><span class="schedule__time--bold">12:00 — 20:00 </span>середа</p>
+            <p class="schedule__time"><span class="schedule__time--bold">12:00 — 20:00 </span>четвер</p>
+            <p class="schedule__time"><span class="schedule__time--bold">12:00 — 20:00 </span>п’ятниця</p>
+            <p class="schedule__time"><span class="schedule__time--bold">11:00 — 19:00 </span>субота</p>
+            <p class="schedule__time"><span class="schedule__time--bold">11:00 — 19:00 </span>неділя</p>
+            <p class="schedule__info">Вихідні понеділок,<br> вівторок<br>Каса припиняє роботу<br> за 1 годину<br>до закриття музею</p>
           </div>
-          <div class="footer__contact contact">
-            <div class="contact__title">Контакти:</div>
-            <p>вул. Грушевського, 6;<br> Київ, 01001</p>
-            <p><a href="tel:+380442781357">тел. +38 (044) 278-13-57</a></p>
-            <p><a href="tel:+380442787454">факс +38 (044) 278-74-54</a></p>
-            <p><a href="mail:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a></p>
+          <div class="footer__contact contacts">
+            <div class="contacts__heading">Контакти:</div>
+            <p class="contacts__address">вул. Грушевського, 6;<br> Київ, 01001</p>
+            <p class="contacts__phone"><a href="tel:+380442781357" class="contacts__link">тел. +38 (044) 278-13-57</a></p>
+            <p class="contacts__fax"><a href="tel:+380442787454" class="contacts__link">факс +38 (044) 278-74-54</a></p>
+            <p class="contacts__mail"><a href="mail:info@namu.kiev.ua" class="contacts__link">e-mail: info@namu.kiev.ua</a></p>
           </div>
+          <div class="footer__copyright">Copyright © 2019. All Rights Reserved.</div>
         </div>
         <div class="footer__content--right">
           <nav class="footer__nav nav">
             <ul class="nav__list">
-              <li class="nav__item"><a href="#" class="nav__link">Галерея</a></li>
-              <li class="nav__item"><a href="#" class="nav__link">Виставки та події</a></li>
-              <li class="nav__item"><a href="#" class="nav__link">Відвідування</a></li>
-              <li class="nav__item"><a href="#" class="nav__link">Стати нашим другом</a></li>
-              <li class="nav__item"><a href="#" class="nav__link">Про Нас</a></li>
-              <li class="nav__item"><a href="#" class="nav__link">Магазин</a></li>
-              <li class="nav__item"><a href="#" class="nav__link">Блог</a></li>
-              <li class="nav__item"><a href="#" class="nav__link">Контакти</a></li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Галерея</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Про Нас</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Виставки та події</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Магазин</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Відвідування</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Блог</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Стати нашим другом</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Контакти</a>
+              </li>
             </ul>
           </nav>
+          <div class="footer__designed">
+            Designed by Zhyriada Marina
+          </div>
         </div>
       </div>
     </footer>
