--- a/src/index.html
+++ b/src/index.html
@@ -128,7 +128,7 @@
         <div class="gallery__switch"></div>
       </div>
 
-      <div class="sub gallery__sub">
+      <div class="sub container__sub">
         <div class="sub__name">Підписка</div>
         <div class="sub__description">Бути в курсі всіх актуальних подій
           та останніх новин.
@@ -143,6 +143,86 @@
         </div>
 
       </div>
+
+      <footer class="footer container__footer">
+        <div class="footer__logos">
+          <h1 class="footer__logos-logo">
+            NA
+            MU
+          </h1>
+          <div class="footer__logos-facebook"></div>
+          <div class="footer__logos-instagram"></div>
+        </div>
+
+        <div class="footer__schedule">
+          <div class="footer__schedule-name">
+            Графік роботи
+          </div>
+          <div class="footer__schedule-times">
+            <span class="footer__schedule-time">12:00— 20:00 </span>середа
+            <span class="footer__schedule-time">12:00— 20:00 </span>четвер
+            <span class="footer__schedule-time">12:00 — 20:00 </span>п’ятниця
+            <span class="footer__schedule-time">11:00 — 19:00 </span>субота
+            <span class="footer__schedule-time">11:00 — 19:00 </span>неділя
+          </div>
+          <div class="footer__schedule-content">
+            Вихідні понеділок, вівторок
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </div>
+
+
+        </div>
+
+        <div class="footer__contacts">
+          <div class="footer__contacts-name">
+            Контакти:
+          </div>
+          <div class="footer__contacts-description">
+            вул. М. Грушевського, 6; Київ, 01001 <br>
+            тел. +38 (044) 278-13-57 <br>
+            факс +38 (044) 278-74-54 <br>
+            e-mail: info@namu.kiev.ua <br>
+          </div>
+        </div>
+
+        <nav class="nav footer__nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#" class="nav__link">Галерея</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Виставка та події</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Відвудування</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Стати нашим другом</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Про Нас</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Магазин</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Блог</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="footer__copyright">
+          Copyright © 2019. All Rights Reserved.
+        </div>
+
+        <div class="footer__designer">
+          Designed by Zhyriada Marina
+        </div>
+      </footer>
 
     </div>
 
