--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,27 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>НАМУ</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="header__leftside">
+        <div class="header__name"> художній музей</div>
+      </div>
+      <div class="header__rightside">
+        <img src="images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.jpg" alt="Національний музей"
+        class="header__image">
+      </div>
+
+    </header>
+
+
+
+
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
