--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&display=swap"
+    rel="stylesheet">
   </head>
+
   <body>
-    <h1>Hello Mate Academy</h1>
+
+    <section class="page page--container">
+      <header class="page__header header">
+
+        <div class="header__nav nav">
+          <div class="header__image"></div>
+
+          <input
+            type="checkbox"
+            class="nav__toggler"
+            id="nav-toggler"
+          >
+
+          <label for="nav-toggler" class="nav__label label">
+            <span></span>
+            <span></span>
+            <span></span>
+          </label>
+
+          <span class="namu">NA <br> MU</span>
+
+          <h1 class="header__name">ХУДОЖНІЙ <br>
+            МУЗЕЙ
+          </h1>
+        </div>
+
+      </header>
+    </section>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
+
 </html>
