--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,55 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Національний Художній Музей України</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <div class="Promo">
+      <nav class="Promo__nav">
+        <div class="Promo__toggler">=</div>
+        <h1 class="Promo__title">Художній <br> Музей</h1>
+        <div class="Promo__pointer">події</div>
+        <a href="#" class="Promo__link">Квитки</a>
+      </nav>
+
+      <div class="Promo__image">Na<br>mu</div>
+    </div>
+
+    <div class="actual">
+      <h2 class="actual__title">Актуальні події</h2>
+      <div class="actual__container">
+        <img
+          src="images/picture1.png"
+          alt="Йду і повертаюсь"
+          class="actual__picture actual__picture-1"
+        >
+        <div class="actual__card actual__card-1">
+          <span class="actual__date"> Виставка 26.08-29.11.2019</span>
+          <h3 class="actual__name">Йду і повертаюсь</h3>
+          <p class="actual__description">
+            Національний Художній Музей України презентує унікальну
+            частину колекції Градобанку - українське мистецтво другої
+            половини 1980-1995 років.
+          </p>
+        </div>
+        <img
+          src="images/picture2.png"
+          alt="І спогади і Мрії"
+          class="actual__picture actual__picture-2"
+        >
+        <div class="actual__card actual__card-2">
+          <span class="actual__date">Виставка 26.08-29.11.2019</span>
+          <h3 class="actual__name">І спогади і Мрії</h3>
+          <p class="actual__description">Національний художній музей
+            України до 100 річчя від дня народження   видатної української
+            художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну
+            виставку «І спогади і мрії».
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
