try yo save deploy

--- a/src/index.html
+++ b/src/index.html
@@ -58,10 +58,16 @@
       <div class="cutaway container__cutaway">
         <div class="cutaway__image">
           <h1 class="cutaway__image-name">ХУДОЖ<span class="cutaway__image-transparent">НІЙ</span> МУЗЕЙ</h1>
+          <div class="cutaway__ticket">
+            <div class="cutaway__ticket-text">КВИТКИ</div>
+            <div class="cutaway__ticket-button"></div>
+          </div>
+          <div class="cutaway__decor">
+            ПОДІЇ
+          </div>
         </div>
 
-        <div class="cutaway__ticket"></div>
-        <div class="cutaway__decor"></div>
+
       </div>
 
       <div class="current container__current">
