--- a/src/index.html
+++ b/src/index.html
@@ -8,19 +8,76 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
+
   <body>
     <header class="header">
       <div class="header__leftside">
-        <div class="header__name"> художній музей</div>
+        <div class="header__menu">
+          <div class="header__menu-stripe"></div>
+          <div class="header__menu-stripe"></div>
+          <div class="header__menu-stripe"></div>
+        </div>
+        <div class="header__center">
+          <h1 class="header__name">худож<span class="header__transparent-letters">ній</span><br>музей</h1>
+          <button class="header__button">квитки</button>
+        </div>
       </div>
       <div class="header__rightside">
         <img src="images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.jpg" alt="Національний музей"
         class="header__image">
       </div>
-
     </header>
 
+    <main class="main">
+      <div class="event">
+        <h2 class="event__heading">Актуальні події</h2>
+        <div class="event__event1">
+          <div class="event__left1">
+            <img
+            class="event__image1"
+            src="images/Rectangle 2.1.jpg" alt="Картина з колекції Градобанку">
+          </div>
+          <div class="event__event1-descr">
+            <div class="event__event1-exhdate">
+              <h4 class="event__event1-exh">виставка</h4>
+              <div class="event__event1-date">26.08-29.11.2019</div>
+            </div>
+            <div class="event__event1-about">
+              <div class="event__name-square">
+                <h3 class="event__event1-name">Йду і повертаюсь</h3>
+                <div class="event__red-square"></div>
+              </div>
+              <p class="event__event1-text">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+        </div>
 
+        <div class="event__event2">
+          <div class="event__event2-descr">
+            <div class="event__event2-exhdate">
+              <h4 class="event__event2-exh">виставка</h4>
+              <div class="event__event2-date">26.08-29.11.2019</div>
+            </div>
+            <div class="event__event2-about">
+              <div class="event__name-square">
+                <h3 class="event__event2-name">І спогади і мрії</h3>
+                <div class="event__red-square"></div>
+              </div>
+              <p class="event__event2-text">
+                Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+          <div class="event__right2">
+            <img
+            class="event__image2"
+            src="images/Rectangle 4.1.jpg" alt="Картина з колекції Градобанку">
+          </div>
+        </div>
+      </div>
+    </main>
 
 
 
