--- a/src/index.html
+++ b/src/index.html
@@ -13,32 +13,48 @@
 
   <body>
 
-    <section class="page page--container">
+    <section class="page">
       <header class="page__header header">
+        <div class="header__sidebar sidebar">
 
-        <div class="header__nav nav">
-          <div class="header__image"></div>
+          <aside class="sidebar__left left">
 
-          <input
-            type="checkbox"
-            class="nav__toggler"
-            id="nav-toggler"
-          >
+            <div class="left__nav nav">
+              <input
+                type="checkbox"
+                class="nav__toggler"
+                id="nav-toggler"
+              >
+              <label for="nav-toggler" class="nav__label label">
+                <span></span>
+                <span></span>
+                <span></span>
+              </label>
+              <span class="nav__logo">NA <br> MU</span>
+            </div>
+          </aside>
 
-          <label for="nav-toggler" class="nav__label label">
-            <span></span>
-            <span></span>
-            <span></span>
-          </label>
+          <aside class="sidebar__menu-image menu-image">
+            <div class="menu-image__block block">
 
-          <span class="namu">NA <br> MU</span>
+              <h1 class="menu-image__text">ХУДОЖ<span>НІЙ</span>
+                <br>
+                МУЗЕЙ
+              </h1>
+              <div class="events">
+                <div class="events__option option">
+                  <p class="option__text"> КВИТКИ</p>
+                </div>
+                <div class="events__button"></div>
+              </div>
+            </div>
+          </aside>
 
-          <h1 class="header__name">ХУДОЖНІЙ <br>
-            МУЗЕЙ
-          </h1>
         </div>
-
       </header>
+    </section>
+
+    <section>
     </section>
 
     <script type="text/javascript" src="scripts/main.js"></script>
