--- a/src/index.html
+++ b/src/index.html
@@ -73,9 +73,26 @@
           <div class="event__right2">
             <img
             class="event__image2"
-            src="images/Rectangle 4.1.jpg" alt="Картина з колекції Градобанку">
+            src="images/Rectangle 4.1.jpg" alt="Картина Тетяни Яблонської">
           </div>
         </div>
+
+        <div class="event__event3">
+          <img
+            class="event__image3"
+            src="images/Rectangle 20.png" alt="Картина періоду від класицизму до романтизму">
+
+          <div class="event__event3-descr">
+            <div class="event__event3-exhdate">
+              <h4 class="event__event3-exh">лекція</h4>
+              <div class="event__event3-date">26/08/2019 - 11:00</div>
+            </div>
+            <h3 class="event__event3-name">Від класицизму до романтизму</h3>
+          </div>
+        </div>
+
+
+
       </div>
     </main>
 
