Half of the header was created

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,90 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="stylesheet" href="./styles/style.scss">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+
+      <h2 class="header__logo logo">
+        <a href="#" class="logo__link">
+          NA
+          <br>
+          MU
+        </a>
+      </h2>
+      <input
+        type="checkbox"
+        class="switch__checkbox"
+        id="check"
+      >
+      <nav class="header__nav nav">
+        <ul class="nav__list">
+          <li class="nav__item"><a href="" class="nav__link">Галерея</a></li>
+          <li class="nav__item"><a href="" class="nav__link">Виставки та події</a></li>
+          <li class="nav__item"><a href="" class="nav__link">Відвідування</a></li>
+          <li class="nav__item"><a href="" class="nav__link">Стати нашим другом</a></li>
+          <li class="nav__item"><a href="" class="nav__link">Про нас</a></li>
+          <li class="nav__item"><a href="" class="nav__link">Магазин</a></li>
+          <li class="nav__item"><a href="" class="nav__link">Блог</a></li>
+          <li class="nav__item"><a href="" class="nav__link">Контакти</a></li>
+        </ul>
+      </nav>
+
+      <label class="header__switch switch" for="check">
+        <svg
+          class="switch__button"
+          width="18"
+          height="12"
+          viewBox="0 0 18 12"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M0 12H18V10H0V12ZM0 7H18V5H0V7ZM0 0V2H18V0H0Z"
+            fill="#0F0E08"
+          >
+          </path>
+        </svg>
+      </label>
+
+      <h1 class="header__page-name">
+        ХУДОЖ<span class="header__page-name--transparent">НІЙ</span>
+        <br>
+        МУЗЕЙ
+      </h1>
+
+      <form action="GET" class="header__search-form search-form">
+        <input
+          type="text"
+          class="search-form__input"
+          value="Квитки"
+          placeholder="Квитки"
+        >
+
+        <button class="search-form__button">
+          <svg
+            class="searc-form__arrow"
+            width="8"
+            height="12"
+            viewBox="0 0 8 12"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M0.589966 10.59L5.16997 6L0.589966 1.41L1.99997 0L7.99997 6L1.99997 12L0.589966 10.59Z"
+              fill="#D7DDE3"
+            >
+            </path>
+          </svg>
+        </button>
+      </form>
+    </header>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
